# apella

./: LICENSE
scripts/: migrate.py  pyproject.toml
server/: api.py  auth.py  core.py  main.py  pre_renderer.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 0313e49585ed_adding_tables_for_user_roles.py  0c82a3cacb88_adding_position_tracking_for_units_and_.py  0f10d1e89649_linking_classes_to_courses.py  1a506405de4f_adding_soft_delete_to_page.py  1ce2b029b2c1_initial_data.py  303762aa4925_adding_question_data.py  44770a483cde_ordering_rubric_items.py  618d9cdf8792_unit_and_lesson_resources.py  628fee213b19_marking_author_for_course.py  681bc958b59d_add_email_to_user.py  743e44f5b0b1_name_for_class.py  75c22c57f334_associating_schools_to_courses.py  776c627b35ab_linking_users_to_schools.py  78564072f911_removing_direct_link_from_unit_to_course.py  7f4d43aea863_linking_classes_to_lessons.py  864f14b5cf84_schema_for_answers.py  8d7458f5e4b0_organizational_tables.py  9abbf14692f8_tracking_school.py  a28ee64d3d55_rubric_grades.py  a2cd529b8c19_rubric_items.py  b5ebd10bcdb9_course_unit_bridge.py  bed827639ace_setting_flag_for_locking_answers.py  cb7f7f84b88b_rubric_item_points.py  d287e378eca6_setting_flag_for_submitting_answers.py  d5b9dd676301_adding_position_tracking_for_pages.py  d82f46651413_password_field.py  e0c08406db78_adding_user_name.py  ed8dd1b47418_getting_rid_of_sections.py  fcb5f6ab9069_allow_units_to_be_hidden.py
server/curriculum/: api.py  html_processing.py  model.py  models.py  repository.py  schema.py  service.py  view_models.py
server/general/: api.py  model.py  models.py  repository.py  schema.py
server/organization/: api.py  model.py  repository.py  schema.py
server/responses/: api.py  model.py  models.py  repository.py  schema.py  service.py  socket_server.py
server/scripts/: migration.py
server/storage/: repository.py
server/templates/response_fields/: inline_select.html  inline_text.html  (+3 more)
(+43 files in other folders)
